# whattrack

./: .gitignore  README.md  convert_fma.sh  main.py  pyproject.toml  submit.sbatch  train.py
audio/: __init__.py  augmentation.py
audio/augmentations/: __init__.py  augmentation_abc.py  background_noise_mixing.py  band_pass_filter.py  high_pass_filter.py  ir_noise_mixing.py  low_pass_filter.py  pitch_jitter.py  reverb.py  tempo_jitter.py  volume.py
lightning_logs/version_2/: hparams.yaml
lightning_logs/version_5/: metrics.csv
model/: dataset.py  fma_dataset.py  model.py
scripts/: augment_audio_file.py  example_command.sh  example_command_full.sh  resample_file.py  validate_dataset.py
utils/: chunk_files.py  test-files.py
wandb/: latest-run
wandb/run-20251213_183356-b1370173/: run-b1370173.wandb
wandb/run-20251213_183356-b1370173/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
