[project]
name = "whattrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "flameprof>=0.4",
    "lightning>=2.6.0",
    "py-spy>=0.4.1",
    "torch>=2.8.0",
    "torchaudio==2.8.0",
    "torchcodec>=0.9.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchcodec = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
